radiusd-freeradius (0.1+beta1-1) unstable; urgency=low

  * Fixed cron log rotation.
  * Put module libraries in own directory.
  * Added generalized SQL support for ODBC, Oracle, and Postgres.
  * Removed bogus build-dep.  (closes: Bug#87277)
  * Added shasta, microsoft, and redback dictionaries.

 -- Chad Miller <cmiller@debian.org>  [TBA]

radiusd-freeradius (0.0.20010109-1) unstable; urgency=low

  * Changed priority, from standard to optional.

 -- Chad Miller <cmiller@debian.org>  Tue,  9 Jan 2001 14:01:38 -0500

radiusd-freeradius (0.0.20001227-1) unstable; urgency=low

  * Initial revision. (closes: Bug#76476)

 -- Chad Miller <cmiller@debian.org>  Wed, 27 Dec 2000 11:58:56 -0500